--- a/index.html
+++ b/index.html
@@ -18,28 +18,67 @@
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
+    console.log('Hello I am %s string', '');
 
     // Styled
-
+    console.log('%c This is some text', 'font-size: 200%;')
+   
     // warning!
+    console.warn('Oh noooooooooooo!');
 
     // Error :|
+    console.error('Shit!');
 
     // Info
+    console.info('Thomas Jefferson and John Adams both died on July 4th (Independance Day) 1826.');
 
     // Testing
+    console.assert(1 === 2, 'That is wrong.'); //console.assert()  will only display if something is actually wrong
+
+    const p =  document.querySelector('p');
+    console.assert(p.classList.contains('ouch'), 'That is wrong!');
 
     // clearing
+    //console.clear(); //clears console
 
     // Viewing DOM Elements
+    console.log(p); // will just the actual element itself.
+    console.dir(p); //Whereas console.dir() shows all the different properties and methods that live in that element.
 
     // Grouping together
+    dogs.forEach(dog =>{
+      console.group(`${dog.name}`);
+      //console.groupCollapsed(`${dog.name}`); // allows the group children to collapse
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old.`);
+      console.log(`${dog.name} is ${dog.age * 7} in dog years.`);
+      console.groupEnd(`${dog.name}`);
+    });
 
     // counting
+    // console.count() counts the ammount of times a element, , object, property, or anything is used.
+    console.count('Travis');
+    console.count('Coffeeteer');
+    console.count('Travis');
+    console.count('Coffeeteer');
+    console.count('Travis');
+    console.count('Travis');
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/wesbos')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
+
+      //table 
+      // console.table - You can take an array of objects assuming that they have the same propeties they will display them in a table.
+      console.table(dogs);
 
   </script>
 </body>
